<resources>
    <string name="app_name">Workout</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_bac">Welcome back! Glad to see you, Again!</string>
    <string name="don_t_have_">Dont have an account? Register Now</string>
    <string name="hello_regis">Hello! Register to get started</string>
    <string name="already_hav">Already have an account? Login Now</string>
    <string name="back"><![CDATA[<]]></string>
</resources>