<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:id="@+id/register"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/hello_regis"
            android:layout_width="0dp"
            android:layout_height="78dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="101dp"
            android:layout_marginRight="22dp"
            android:gravity="top"
            android:lineSpacingExtra="3sp"
            android:fontFamily="@font/urbanist"
            android:text="@string/hello_regis"
            android:textAppearance="@style/hello_regis"
            android:textStyle="bold"
            android:translationY="-1.5sp" />

        <EditText
            android:id="@+id/registerUsername"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="211dp"
            android:layout_marginRight="22dp"
            android:autofillHints="Username"
            android:background="@drawable/rectangle_4"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
            android:fontFamily="@font/urbanist"
            android:hint="Username"
            android:paddingStart="15dp"
            android:paddingEnd="10dp" />

        <EditText
            android:id="@+id/registerPassword"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="279dp"
            android:layout_marginRight="22dp"
            android:autofillHints="Password"
            android:background="@drawable/rectangle_4"
            android:fontFamily="@font/urbanist"
            android:hint="Password"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:paddingEnd="10dp" />

        <EditText
            android:id="@+id/registerConfirmPassword"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="347dp"
            android:layout_marginRight="22dp"
            android:autofillHints="Password"
            android:background="@drawable/rectangle_4"
            android:fontFamily="@font/urbanist"
            android:hint="Confirm Password"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:paddingEnd="10dp" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="500dp"
            android:layout_marginRight="22dp"
            android:background="@drawable/rectangle_1"
            android:fontFamily="@font/urbanist"
            android:text="Register" />

        <TextView
            android:id="@+id/already_hav"
            android:layout_width="253dp"
            android:layout_height="21dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="741dp"
            android:layout_marginEnd="60dp"
            android:fontFamily="@font/urbanist"
            android:gravity="center_horizontal|top"
            android:lineSpacingExtra="-2sp"
            android:text="@string/already_hav"
            android:textAppearance="@style/already_hav" />

        <Button
            android:id="@+id/registerBack"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="22dp"
            android:layout_marginRight="22dp"
            android:text="@string/back" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>